Fixing spacing

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@
   @media (min-width:800px) {
     section {
       display: grid;
+      place-content: center;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: minmax(240px 1fr 1fr);
       margin-top: 4rem;
